# agentic-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agents.py  docker-compose.yml  llm.py  main.py  prompts.py  pyproject.toml  requirements.txt  retriever.py  utils.py  workflow.py
.github/workflows/: ci.yml
agents/: __init__.py  answer_generator.py  query_rewriter.py  retrieval_grader.py  router.py
config/: settings.py
eval/: golden_set.json  run_eval.py
llm/: __init__.py  groq_client.py  prompts.py
retrieval/: chunker.py  embeddings.py  ingestion.py  vector_store.py
tests/: test_chunker.py  test_eval_harness.py  test_groq_client.py  test_retrieval_grader.py  test_retriever.py  test_rewriter.py  test_router.py  test_workflow_integration.py
ui/: app.py
utils/: logger.py
workflow/: rag_workflow.py
