[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-rag"
version = "0.1.0"
description = "Hand-built agentic RAG pipeline (Groq LLM + ChromaDB)"
requires-python = ">=3.10"
dependencies = [
    "chromadb",
    "pymupdf",
    "requests",
    "python-dotenv",
    "sentence-transformers",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
ui = [
    "streamlit",
]

[tool.setuptools.packages.find]
include = ["agents*", "llm*", "retrieval*", "config*", "workflow*", "utils*", "eval*", "ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
